# ghostwriter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml
src/: main.rs  util.rs
src/commands/: mod.rs  record.rs  replay.rs
