[package]
name = "ghostwriter"
version = "1.0.0"
edition = "2021"
authors = ["Ringo Hoffmann <contact@zekro.de>"]
description = "Record file changes and reploay them step by step."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
diffy = "0.3.0"
duration-string = "0.1.1"
env_logger = "0.10.0"
log = "0.4.17"
notify = "5.0.0"

